# xaigd-dataset-viewer

./: AGENTS.md  README.md  app.py  pyproject.toml
doc/: spec.md
tests/: test_app.py  test_data.py  test_keyboard.py  test_navigation.py  test_render.py
viewer/: __init__.py  constants.py  data.py  keyboard.py  models.py  render.py
xaigd_viewer/: __init__.py  data.py  keyboard.py  models.py  navigation.py  render.py
