[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xaigd-label-viewer"
version = "0.1.0"
description = "Streamlit label visualization tool for the X-AIGD dataset."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.0.0",
    "huggingface_hub>=0.23.0",
    "pillow>=10.0.0",
    "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["viewer*"]
